@@ -1,5 +1,5 @@
 {
-  "count": 5,
+  "count": 6,
   "uniques": 1,
   "clones": [
     {
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2023-08-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-23T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
